add css and js to html page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nelp</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/style.css') }}" />
 </head>
 <body>
-<p>Works!</p>
+
+<div class="container">
+
+</div>
+
+<script src="{{ url_for('static', filename='jQuery/jquery-3.3.1.min.js') }}"></script>
+<script src="{{ url_for('static', filename='bootstrap/js/bootstrap.js') }}"></script>
+<script src="{{ url_for('static', filename='assets/script.js') }}"></script>
 </body>
 </html>
