--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Nelp</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/style.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/style_home.css') }}" />
 </head>
 <body>
 
-<div class="container" id="nelp-main">
+<div class="container" id="nelp-home">
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8 search">
@@ -25,6 +25,5 @@
 
 <script src="{{ url_for('static', filename='jQuery/jquery-3.3.1.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.js') }}"></script>
-<script src="{{ url_for('static', filename='assets/script.js') }}"></script>
 </body>
 </html>
