--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Business Name">
                 <div class="input-group-append">
-                    <button class="btn btn-primary" type="button">Search</button>
+                    <button class="btn btn-primary" type="button" onclick="/api/query">Search</button>
                 </div>
             </div>
         </div>
