--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,10 +13,12 @@
         <div class="col-md-2"></div>
         <div class="col-md-8 search">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Business Name">
-                <div class="input-group-append">
-                    <button class="btn btn-primary" type="button" onclick="/api/query">Search</button>
-                </div>
+                <form action="/api/query" method="POST">
+                    <input type="text" class="form-control" placeholder="Business Name">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" onclick="/api/query">Search</button>
+                    </div>
+                </form>
             </div>
         </div>
         <div class="col-md-2"></div>
