add page render

--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -5,12 +5,13 @@
 <div class="nelp-detail">
 
     <div class="names">
-        <h2>Business Name</h2>
-        <p>Quickly build an effective pricing table for your potential customers with this Bootstrap example.
-            It's built with default Bootstrap components and utilities with little customization.</p>
+        <h2>{{ name }}</h2>
+        <h5>{{ address }}</h5>
+        <h5>{{ number }}</h5>
     </div>
 
     <div class="images">
+        {{ photos }}
         Insert some images
     </div>
 
