update home/view file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
                 <form action="/api/query" method="POST">
                     <input type="text" class="form-control" placeholder="Business Name">
                     <div class="input-group-append">
-                        <button class="btn btn-primary" type="button" onclick="/api/query">Search</button>
+                        <button class="btn btn-primary" type="submit">Search</button>
                     </div>
                 </form>
             </div>
