--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -10,10 +10,28 @@
         <h5>{{ number }}</h5>
     </div>
 
-    <div class="images">
-        {{ photos }}
-        Insert some images
-    </div>
+    <!--<div id="dev-nelp-carousel" class="carousel slide" data-ride="carousel">-->
+        <!--<ol class="carousel-indicators">-->
+            <!--<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+            <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+            <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+        <!--</ol>-->
+        <!--<div class="carousel-inner">-->
+            <!--{% for photo in photos %}-->
+                <!--<div class="carousel-item">-->
+                    <!--{{ photo }}-->
+                <!--</div>-->
+            <!--{% endfor %}-->
+        <!--</div>-->
+        <!--<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
+            <!--<span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+            <!--<span class="sr-only">Previous</span>-->
+        <!--</a>-->
+        <!--<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
+            <!--<span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+            <!--<span class="sr-only">Next</span>-->
+        <!--</a>-->
+    <!--</div>-->
 
     <div class="comments">
         <div class="list-group">
