--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,17 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8 search">
-            <div class="input-group mb-3">
+            <div class="logo">
+                <img src="{{ url_for('static', filename='assets/images/logo.png') }}" />
+            </div>
+
+            <div class="shadow-lg p-3 mb-5 bg-white rounded">
                 <form action="/api/query" method="POST">
-                    <input type="text" class="form-control" placeholder="Business Name">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary" type="submit">Search</button>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Business Name">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="submit">Search</button>
+                        </div>
                     </div>
                 </form>
             </div>
