--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -9,7 +9,7 @@
 <body id="nelp-main">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Nelp</a>
+        <a class="navbar-brand" href="/">Nelp</a>
     </nav>
 
     <div class="container">
