--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -6,11 +6,13 @@
 
     <div class="lists">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <a href="#" class="btn btn-primary">Check Detail</a>
-            </div>
+            {% for id in id_list %}
+                <img class="card-img-top" src="{{icon_list[loop.index-1]}}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">{{name_list[loop.index-1]}}</h5>
+                    <a href="#" class="btn btn-primary">Check Detail</a>
+                </div>
+            {% endfor %}
         </div>
     </div>
 
