add keyword search

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
             <div class="shadow-lg p-3 mb-5 bg-white rounded">
                 <form action="/api/query" method="POST">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Business Name">
+                        <input type="text" class="form-control" placeholder="Business Name" name="keyword">
                         <div class="input-group-append">
                             <button class="btn btn-primary" type="submit">Search</button>
                         </div>
