--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -11,7 +11,7 @@
                     <img class="card-img-top" src="{{icon_list[loop.index-1]}}" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">{{name_list[loop.index-1]}}</h5>
-                        <a href="#" class="btn btn-primary">Check Detail</a>
+                        <a href="/detail/{{ id }}" class="btn btn-primary">Check Detail</a>
                     </div>
             </div>
             {% endfor %}
