change post to get

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="shadow-lg p-3 mb-5 bg-white rounded">
-                <form action="/api/query" method="POST">
+                <form action="/list" method="GET">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Business Name" name="keyword">
                         <div class="input-group-append">
