--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -6,15 +6,20 @@
 
     <div class="lists">
         <div class="card-columns">
-            {% for id in id_list %}
-            <div class="card">
+            {% if id_list %}
+                {% for id in id_list %}
+                <div class="card">
                     <img class="card-img-top" src="{{icon_list[loop.index-1]}}" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">{{name_list[loop.index-1]}}</h5>
-                        <a href="/detail/{{ id }}" class="btn btn-primary">Check Detail</a>
+                        <p>{{address_list[loop.index-1]}}</p>
+                        <a href="/detail/{{ placeid_list[loop.index-1] }}" class="btn btn-primary btn-sm">
+                            Check Detail
+                        </a>
                     </div>
-            </div>
-            {% endfor %}
+                </div>
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
 
