--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -4,6 +4,13 @@
 
 <div class="nelp-list">
 
+    <div class="shadow-sm p-3 mb-5 bg-white rounded">
+        You are searching:
+        <span class="badge badge-dark">
+            {{ keyword }}
+        </span>
+    </div>
+
     <div class="lists">
         <div class="card-columns">
             {% if id_list %}
