--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Nelp</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-charming/css/bootstrap4-charming.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/style.css') }}" />
 </head>
 
