--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -16,7 +16,7 @@
             {% if id_list %}
                 {% for id in id_list %}
                 <div class="card">
-                    <img class="card-img-top" src="{{photo_list[loop.index-1]}}" alt="Card image cap">
+                    <img class="card-img-top" src="{{photo_list[loop.index-1]}}">
                     <div class="card-body">
                         <h5 class="card-title">{{name_list[loop.index-1]}}</h5>
                         <p>{{address_list[loop.index-1]}}</p>
