--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -4,34 +4,19 @@
 
 <div class="nelp-detail">
 
-    <div class="names">
-        <h2>{{ name }}</h2>
-        <h5>{{ address }}</h5>
-        <h5>{{ number }}</h5>
+    <div class="names jumbotron">
+        <div class="row">
+            <div class="col-4">
+                <img class="img" src="{{ photo }}" />
+            </div>
+            <div class="col-8">
+                <h3 class="display-4">{{ name }}</h3>
+                <p class="lead">{{ address }}</p>
+                <p>{{ number }}</p>
+            </div>
+        </div>
     </div>
 
-    <!--<div id="dev-nelp-carousel" class="carousel slide" data-ride="carousel">-->
-        <!--<ol class="carousel-indicators">-->
-            <!--<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
-            <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
-            <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
-        <!--</ol>-->
-        <!--<div class="carousel-inner">-->
-            <!--{% for photo in photos %}-->
-                <!--<div class="carousel-item">-->
-                    <!--{{ photo }}-->
-                <!--</div>-->
-            <!--{% endfor %}-->
-        <!--</div>-->
-        <!--<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
-            <!--<span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-            <!--<span class="sr-only">Previous</span>-->
-        <!--</a>-->
-        <!--<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
-            <!--<span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-            <!--<span class="sr-only">Next</span>-->
-        <!--</a>-->
-    <!--</div>-->
 
     <div class="comments">
         <div class="list-group">
