change project structure

--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -10,6 +10,10 @@
                 <div class="jumbotron">
                     <input type="hidden" name="id" value="{{ id }}" />
                     <div class="form-group">
+                        <label>Name (Could be empty)</label>
+                        <input type="text" name="user_name" class="form-control">
+                    </div>
+                    <div class="form-group">
                         <label for="exampleFormControlSelect1">Negative Rating</label>
                         <select class="form-control" name="rating" id="exampleFormControlSelect1">
                             <option>-1</option>
